SNC-5937,SNC-5936. Fix minor UI issues

--- a/src/MEGASync/gui/ui/CancelConfirmWidget.ui
+++ b/src/MEGASync/gui/ui/CancelConfirmWidget.ui
@@ -18,7 +18,8 @@
 {
 font-size: 14px;
 line-height: 20px;
-}</string>
+}
+</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -217,15 +218,27 @@ line-height: 20px;
       <number>0</number>
      </property>
      <widget class="QWidget" name="pCancelChoice">
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="spacing">
+        <number>-1</number>
+       </property>
+       <property name="sizeConstraint">
+        <enum>QLayout::SetDefaultConstraint</enum>
+       </property>
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::MinimumExpanding</enum>
+         </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>111</width>
+           <width>1</width>
            <height>20</height>
           </size>
          </property>
@@ -233,6 +246,18 @@ line-height: 20px;
        </item>
        <item>
         <widget class="QPushButton" name="pDismiss">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
@@ -249,6 +274,18 @@ line-height: 20px;
        </item>
        <item>
         <widget class="QPushButton" name="pProceed">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
@@ -268,9 +305,12 @@ line-height: 20px;
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::MinimumExpanding</enum>
+         </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>110</width>
+           <width>1</width>
            <height>20</height>
           </size>
          </property>
