--- a/src/MEGASync/gui/ui/CrashReportDialog.ui
+++ b/src/MEGASync/gui/ui/CrashReportDialog.ui
@@ -32,7 +32,14 @@
    <string>Send crash report</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">#CrashReportDialog
+{
+background-color: #FFFFFF;  /*colorToken.page-background*/
+}
+#wNotificationBanner
+{
+border-radius: 8;
+}</string>
   </property>
   <property name="TOKENIZED" stdset="0">
    <bool>true</bool>
@@ -181,7 +188,7 @@
         </size>
        </property>
        <property name="styleSheet">
-        <string notr="true">border-radius: 8;</string>
+        <string notr="true"/>
        </property>
        <property name="type" stdset="0">
         <string notr="true">notification</string>
@@ -233,8 +240,8 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>219</width>
-          <height>20</height>
+          <width>10</width>
+          <height>10</height>
          </size>
         </property>
        </spacer>
@@ -242,7 +249,7 @@
       <item>
        <widget class="QPushButton" name="bSubmit">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -279,7 +286,7 @@
       <item>
        <widget class="QPushButton" name="bCancel">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
