--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -164,6 +164,7 @@
         <file alias="arrow-down-brand-primary.svg">images/themed/dark/arrow-down-brand-primary.svg</file>
         <file alias="arrow-up-brand-primary.svg">images/themed/dark/arrow-up-brand-primary.svg</file>
         <file alias="syncing-icon-secondary.svg">images/themed/dark/syncing-icon-secondary.svg</file>
+        <file alias="sync-01.svg">images/themed/dark/sync-01.svg</file>
         <file alias="file-search-02.svg">images/themed/dark/file-search-02.svg</file>
         <file alias="file-question-02.svg">images/themed/dark/file-question-02.svg</file>
         <file alias="link-01.svg">images/themed/dark/link-01.svg</file>
