--- a/src/MEGASync/gui/ui/ProgressIndicatorDialog.ui
+++ b/src/MEGASync/gui/ui/ProgressIndicatorDialog.ui
@@ -29,7 +29,14 @@
    <string notr="true"/>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">#ProgressIndicatorDialog
+{
+background-color: #FFFFFF;  /*colorToken.page-background*/
+}
+</string>
+  </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
